<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_control_pkg</name>
  <version>0.0.1</version>
  <description>Sterowanie UR za pomoca ArUco</description>
  <maintainer email="oskarpluta1906@gmail.com">Oskar</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>usb_cam</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
